--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -6,7 +6,7 @@
   </div>
   <div class="module module--horizontal">
     <ul class="collapsible">
-    {% for q in site.data.faq %}
+    {% for q in site.data.general.faq %}
       <li>
         <div class="collapsible-header"><i class="material-icons">question_answer</i>{{ q.question }}</div>
         <div class="collapsible-body"><span>{{ q.answer }}</span></div>
