--- a/_includes/lifestyle.html
+++ b/_includes/lifestyle.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col s12 center">
       <h2><a id="lifestyle" class="anchor">Lifestyle</a></h2>
-      <p class="left-align light">The Fairport Ridge lifestyle is all about freedom and luxury. You'll have the freedom to enjoy your apartment home as well as your hobbies and interests because you won't be saddled with all the responsibilities of home ownership. The hassles of maintaining the grass and landscaping, cleaning the gutters, repairing appliances, or shoveling the snow are all gone. Pursue what you love to do and leave the hassles up to us!</p>
+      <p class="left-align light">{{ site.data.general.lifestyle }}</p>
     </div>
   </div>
 </div>
