--- a/_includes/pictures.html
+++ b/_includes/pictures.html
@@ -12,7 +12,7 @@
       </div>
       <div class="glide__wrapper">
         <ul class="glide__track">
-          {% for image in site.data.images %}
+          {% for image in site.data.general.images %}
           <li class="glide__slide">
             <div class="box">
               <img src="img/{{ image.src }}">
