--- a/_includes/video.html
+++ b/_includes/video.html
@@ -3,7 +3,7 @@
     <div class="container">
       <a href="#" class="logo-header"><img src="img/logo.png" alt="Fairport Ridge, Luxury Apartments logo"></a>
       <div class="row center">
-        <a href="#contact" id="header-btn" class="btn-large waves-effect waves-light light-blue accent-4">Apply Today</a>
+        <a href="#contact" id="header-btn" class="btn-large waves-effect waves-light light-blue accent-4">{{ site.data.general.contact_button }}</a>
       </div>
     </div>
   </div>
