--- a/_includes/video.html
+++ b/_includes/video.html
@@ -7,7 +7,7 @@
       </div>
     </div>
   </div>
-  <video loop class="fillWidth" preload="none" id="video-header">
+  <video loop class="fillWidth" preload="none" id="video-header" muted>
     <source src="img/Up.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
     <source src="img/Up.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
   </video>
