--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>{{ site.title }}</title>
 
-  <!-- CSS  -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121848686-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'UA-121848686-1');
+  </script>
+  
+  <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 	<link rel="stylesheet" href="css/glide.core.min.css">
