--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2598,7 +2598,7 @@ nav { height: 72px; padding: 4px 0; }
 
 .logo-header img { max-width: 100%; max-height: 300px; }
 
-.important-header { display: flex; justify-content: center; align-items: center; width: 100%; background-color: #b55063; height: 48px; }
+.important-header { display: flex; justify-content: center; align-items: center; width: 100%; background-color: #b55063; height: max(48px, auto); }
 .important-header p { margin: 0; }
 
 #map { width: 100%; height: 500px; height: 60vh; border: none; }
